--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "helmet": "^3.20.0",
+    "lodash": "^4.17.15",
     "mongoose": "^5.6.10",
     "nanoid": "^2.0.3",
     "winston": "^3.2.1"
