--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.6.10",
     "nanoid": "^2.0.3",
+    "supertest": "^4.0.2",
     "winston": "^3.2.1"
   }
 }
