--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "helmet": "^3.20.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.6.10",
+    "morgan": "^1.9.1",
     "nanoid": "^2.0.3",
     "supertest": "^4.0.2",
     "winston": "^3.2.1"
