--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "colors": "^1.3.3",
     "compression": "^1.7.4",
     "config": "^3.2.2",
     "cors": "^2.8.5",
