--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Gregory Tandiono <gregtandiono@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/mocha/bin/_mocha --exit"
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/_mocha --exit",
+    "start": "node ./seed.js && node index.js",
+    "start:prod": "NODE_ENV=production node ./seed.js && NODE_ENV=production node index.js"
   },
   "standard": {
     "env": [
