--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
 version: "3.7"
 services:
   web:
+    image: gregtandiono/orgcommnode-rest:1
     build: .
     ports:
       - "1337:1337"
     depends_on:
       - mongo
+    networks:
+      - webnet
   mongo:
     image: mongo
+    networks:
+      - webnet
+networks:
+  webnet:
