--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/mocha/bin/_mocha --exit",
+    "test:coverage": "NODE_ENV=test nyc ./node_modules/mocha/bin/_mocha --exit",
     "start": "node ./seed.js && node index.js",
     "start:prod": "NODE_ENV=production node ./seed.js && NODE_ENV=production node index.js"
   },
